@@ -2266,3 +2266,6 @@ Introduced max() and min() functions to .cal library.
 Added random incident patch sampling to bsdf2klems to improve accuracy
 with scattering interpolation representation input (e.g., from
 pabopto2bsdf).  The other input types already sampled incident patch area.
+
+Added gendaymtx -A option to compute average sky over all the input
+time steps.
